--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,15 +1,2 @@
-.header
-  %h1
-    %a(href="#")
-      = image_tag "logo.png"
-.main
-  .container
-    .container__header
-      新規会員登録
-    .container__section
-      メールアドレスで登録
-      facebookで登録
-      googleで登録
-.footer
-  %a(href="#")
-    = image_tag "logo-white.png"
+%h1 Messages#index
+%p Find me in app/views/messages/index.html.erb
