--- a/app/views/products/registration.html.haml
+++ b/app/views/products/registration.html.haml
@@ -1,1 +1,2 @@
-%h1 registration
+= render partial: 'layouts/signin_registration_header.html'
+= render partial: 'layouts/signin_registration_footer.html'
