--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -2,9 +2,41 @@
   headerspace
 .nav
   navispace
-.main
-  .main__side
-    main__sidespace
+.mypage-container__side
+  %nav.mypage-nav
+    %ul.mypage-nav-list
+      %li< マイページ
+      %li< いいね！一覧
+      %li< 出品する
+      %li< 出品した商品−出品中
+      %li< 出品した商品−取引中
+      %li< 出品した商品−売却済み
+      %li< 購入した商品−取引中
+      %li< 購入した商品−過去の取引
+      %li< ニュース一覧
+      %li
+        = link_to "#", class: "mypage-nav-list-item" do
+          評価一覧
+          %i.fa.fa-angle-right.icon
+      %li< ガイド
+      %li< お問い合わせ
+
+    %h3
+      メルペイ
+    %ul
+      %li< 売上・振込申請
+      %li< ポイント
+
+    %h3
+      設定
+    %ul
+      %li< プロフィール
+      %li< 発送元・お届け先住所変更
+      %li< 支払い方法
+      %li< メール／パスワード
+      %li< 本人情報
+      %li< 電話番号の確認
+      %li< ログアウト
 
   .main__content
     main__contentspace
