--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,6 @@
 @import "reset";
-@import "top";
+@import "header";
+@import "top/main";
+@import "top/banner";
+@import "top/exhibition";
+@import "footer";
