--- a/app/views/products/create.html.haml
+++ b/app/views/products/create.html.haml
@@ -1,2 +1,137 @@
-%h1 Products#create
-%p Find me in app/views/products/create.html.haml
+.products-wall
+  .products-header
+    
+  .products-contents
+    .products-contents__main
+
+      .products-contents__main-image
+        .products-contents__main-image__title
+          出品画像
+          .products-contents__main-image__title-Required
+        .products-contents__main-image__text
+          最大10枚までアップロードできます
+        .products-contents__main-image__box
+          .products-contents__main-image__box-input
+            .products-contents__main-image__box-input__icon
+            .products-contents__main-image__box-input__text
+              ドラックアンドドロップ
+              %br/
+              またはクリックしてファイルをアップロード
+    
+      .products-contents__main-border
+    
+      .products-contents__main-overview
+        .products-contents__main-overview__name
+          .products-contents__main-overview__name__title
+            商品名
+          .products-contents__main-overview__name__text
+            40文字まで
+        .products-contents__main-overview__description
+          .products-contents__main-overview__description__title
+            商品の説明
+          .products-contents__main-overview__description__text
+            商品の説明 （必須1,000文字以内）
+            %br/
+            （色、素材、重さ、定価、注意点など）
+            %br/
+            例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。
+          .products-contents__main-overview__description__count
+            0/1000
+
+      .products-contents__main-border
+
+      .products-contents__main-details
+        .products-contents__main-details-title
+          商品の詳細
+        .products-contents__main-details__category
+          .products-contents__main-details__category-title
+            カテゴリー
+          .products-contents__main-details__category-box
+            選択してください
+        .products-contents__main-details__brand
+          .products-contents__main-details__brand-title
+            ブランド
+          .products-contents__main-details__brand-box
+            例) シャネル
+        .products-contents__main-details__status
+          .products-contents__main-details__status-title
+            商品の状態
+          .products-contents__main-details__status-box
+            選択してください
+
+      .products-contents__main-border
+
+      .products-contents__main-details
+        .products-contents__main-details-title
+          商品の詳細
+        .products-contents__main-details__category
+          .products-contents__main-details__category-title
+            カテゴリー
+          .products-contents__main-details__category-box
+            選択してください
+        .products-contents__main-details__brand
+          .products-contents__main-details__brand-title
+            ブランド
+          .products-contents__main-details__brand-box
+            例) シャネル
+        .products-contents__main-details__status
+          .products-contents__main-details__status-title
+            商品の状態
+          .products-contents__main-details__status-box
+            選択してください
+
+      .products-contents__main-border
+
+      .products-contents__main-delivery
+        .products-contents__main-delivery__charge
+          .products-contents__main-delivery__charge-title
+            配送料の負担
+          .products-contents__main-delivery__charge-box
+            選択してください
+        .products-contents__main-delivery__area
+          .products-contents__main-delivery__area-title
+            発送元の地域
+          .products-contents__main-delivery__area-box
+            選択してください
+        .products-contents__main-delivery__date
+          .products-contents__main-delivery__date-title
+            発送までの日数
+          .products-contents__main-delivery__date-box
+            選択してください
+
+      .products-contents__main-border
+
+      .products-contents__main-sale
+        .products-contents__main-sale__title
+          価格 (¥300〜9,999,999)
+        .products-contents__main-sale__box
+          .products-contents__main-sale__box-title
+            販売価格
+          .products-contents__main-sale__box-price
+            .products-contents__main-sale__box-price__mark
+              ¥
+            .products-contents__main-sale__box-price__input
+              0
+        .products-contents__main-sale__comission
+          .products-contents__main-sale__comission__box
+            .products-contents__main-sale__comission__box-title
+              販売手数料 (10%)
+            .products-contents__main-sale__comission__box-price
+              ー
+        .products-contents__main-sale__border
+        
+        .products-contents__main-sale__profit
+          .products-contents__main-sale__profit__box
+            .products-contents__main-sale__profit__box-title
+              販売利益
+            .products-contents__main-sale__profit__box-price
+              ー
+        .products-contents__main-sale__button
+          .products-contents__main-sale__button-exhibition
+            出品する
+          .products-contents__main-sale__button-back
+            もどる
+        .products-contents__main-sale__foot
+          禁止されている行為および出品物を必ずご確認ください。偽ブランド品や盗品物などの販売は犯罪であり、法律により処罰される可能性があります。 また、出品をもちまして加盟店規約に同意したことになります。
+
+  .products-footer
