--- a/app/assets/stylesheets/modules/_products.scss
+++ b/app/assets/stylesheets/modules/_products.scss
@@ -32,7 +32,7 @@
       padding: 40px 64px;
       text-align: center;
       background-color: #fff;
-      border-bottom: 1px solid lightgrey;
+      border-bottom: 1px solid lightgray;
       p {
         font-size: 14px;
       }
@@ -61,12 +61,6 @@
         display: block;
         background-color: #fff;
       }
-      .signin-btn {
-        background-color: #3CCACE;
-        cursor: pointer;
-        font-size: 14px;
-        color: #fff;
-      }
       a {
         display: block;
         text-decoration: none;
@@ -77,6 +71,92 @@
         background-color: #fff;
       }
     }
+  }
+  &__signup-panel {
+    width: 700px;
+    background-color: #fff;
+    margin: 0 auto;
+    &__header {
+      text-align: center;
+      font-size: 22px;
+      padding: 32px;
+      border-bottom: 1px solid lightgray;
+      background-color: #fff;
+      h2 {
+        background-color: #fff;
+      }
+    }
+    &__main {
+      width: 100%;
+      padding: 24px 16px 40px 16px;
+      background-color: #fff;
+      &__form {
+        width: 343px;
+        margin: 0 auto;
+        background-color: #fff;
+        &__item {
+          background-color: #fff;
+          p {
+            display: inline;
+            font-size: 14px;
+            font-weight: 600;
+          }
+          .form-require {
+            background-color: red;
+            font-size: 12px;
+            color: #fff;
+            padding: 2px 4px;
+            margin-left: 8px;
+          }
+          .input-form {
+            width: 100%;
+            background-color: #fff;
+            padding: 10px 16px 8px 16px;
+            margin-top: 8px;
+            border-radius: 4px;
+            box-shadow: none;
+            outline: none;
+            border: 1px solid #ccc;
+            height: 48px;
+          }
+          .name-form {
+            width: calc(50% - 4px);
+          }
+          .name-form:first-of-type {
+            margin-right: 8px;
+          }
+          .form-block {
+            background-color: #fff;
+          }
+          .birth-form {
+            width: 76px;
+          }
+        }
+        &__btn {
+          background-color: #fff;
+          p {
+            background-color: #fff;
+            margin-top: 24px;
+            font-size: 14px;
+            a {
+              text-decoration: none;
+              color: #0099E8;
+            }
+          }
+          button {
+            margin-top: 24px;
+            width: 100%;
+            height: 48px;
+          }
+        }
+      }
+    }
+  }
+  .submit-btn {
+    background-color: #3CCACE;
+    cursor: pointer;
+    font-size: 14px;
+    color: #fff;
   }
 }
 
