--- a/app/views/products/signin.html.haml
+++ b/app/views/products/signin.html.haml
@@ -7,6 +7,6 @@
     .container__login-panel__signin
       %input(type="email" name="email" value="" placeholder="メールアドレス" class="container__login-panel__signin__group input-text")
       %input(type="password" name="password" value="" placeholder="パスワード" class="container__login-panel__signin__group input-text")
-      = button_tag "ログイン", type: "submit", class: "container__login-panel__signin__group signin-btn"
+      = button_tag "ログイン", type: "submit", class: "container__login-panel__signin__group submit-btn"
       = link_to 'パスワードをお忘れの方', '#', class: "container__login-panel__signin__group"
 = render partial: 'layouts/signin_registration_footer.html'
