create_link_to_page

--- a/app/assets/stylesheets/modules/_products.scss
+++ b/app/assets/stylesheets/modules/_products.scss
@@ -35,6 +35,7 @@
       border-bottom: 1px solid lightgray;
       p {
         font-size: 14px;
+        background-color: #fff;
       }
       a {
         display: block;
