--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,2 +1,2 @@
-%h1 Products#index
-%p Find me in app/views/products/index.html.haml
+= link_to "新規会員登録", products_registration_path, class: "registaration__btn"
+= link_to "ログイン", products_signin_path, class: "signin__btn"
