--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -34,8 +34,8 @@
             商品の説明
             .products-contents__main-overview__description__title-required
               必須
-          %input.products-contents__main-overview__description__text{:placeholder => "商品の説明（必須 1,000文字以内）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。", :type => "text"}/
-
+          -# %input.products-contents__main-overview__description__text{:placeholder => "商品の説明（必須 1,000文字以内）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。", :type => "text"}/
+          %textarea{placeholder: "商品の説明（必須 1,000文字以内）\n（色、素材、重さ、定価、注意点など）\n\n例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。", name: "text", rows: "7", class: "products-contents__main-overview__description__text"}
           .products-contents__main-overview__description__count
             0/1000
 
