--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -7,6 +7,7 @@
     margin: 0 auto;
     padding: 15px 0 0;
     background-color: #fff;
+    
     .mainheader {
       position: relative;
       display: flex;
@@ -14,17 +15,29 @@
       &__icon {
         vertical-align: bottom;
       }
-      &__searchbox {
+      &__search {
         width: calc(100% - 26px);
-        padding: 0 0 0 5px;
-      }
-      &__resultbtn {
-        height: 18px;
-        width: 18px;
-        border: 0;
-        cursor: pointer;
-        background-color: #3CCACE;
-        padding: 8px;
+        padding: 0 0 0 50px;
+        display: flex;
+        position: relative;
+        align-items: center;
+        
+        &--box{
+          margin-left: auto;
+          width: 100%;
+          height: 34px;
+          border: 1px solid rgb(216, 169, 169);
+          align-items: center;
+          box-sizing: border-box;
+        }
+        &--btn {
+          height: 18px;
+          width: 18px;
+          border: 0;
+          cursor: pointer;
+          background-color: #3CCACE;
+          padding: 8px;
+        }
       }
     }
     .navigation {
