--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,4 @@
 @import "reset";
-@import "modules/products";
+@import "modules/users";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "mixin/clearfix"
